<resources>
    <string name="app_name">transmission_between_activity</string>
    <string name="username">Username :</string>
    <string name="domine_example_com">domine@example.com</string>
    <string name="password">Password :</string>
    <string name="pass">**********</string>
    <string name="login">login</string>
    <string name="welcome">welcome</string>
    <string name="load">load</string>
</resources>